unpackaged/main/default/objects/FS_Membership_Bundle__c/FS_Membership_Bundle__c.object-meta.xml
<CustomObject>
    <label>Membership Bundle</label>
    <nameField>
        <displayFormat>MB-{000000}</displayFormat>
        <label>Membership Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>