unpackaged/main/default/objects/FS_Membership_Bundle__c/fields/FS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Active__c</fullName>
    <formula>IF( AND(FS_Start_Date__c &lt;=  TODAY() , FS_End_Date__c &gt;= TODAY() ), true, false)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>