unpackaged/main/default/objects/FS_Membership_Bundle__c/fields/FS_Number_of_Free_Sections__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Free_Sections__c</fullName>
    <label>Number of Free Sections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>