unpackaged/main/default/objects/FS_Membership_Bundle__c/fields/FS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>